--- a/www/css/home.css
+++ b/www/css/home.css
@@ -253,3 +253,63 @@ min-height:6.250em;*/
     color: #536DFE;
     font-size: 0.750em;
 }
+
+.modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.modal-dialog {
+  position: fixed;
+  margin: 0;
+  max-width: 100%;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+}
+
+.modal-content {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  box-shadow: none;
+}
+
+.modal-header {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  height: 50px;
+  padding: 10px;
+  background: #5C6BC0;
+  border: 0;
+}
+
+.modal-title {
+  font-weight: 300;
+  font-size: 2em;
+  color: #fff;
+  line-height: 30px;
+}
+
+.modal-body {
+  position: relative;
+  top: 50px;
+  bottom: 0px;
+  width: 98%;
+  font-weight: 300;
+  overflow: auto;
+}
+
+.btn-modal-header {
+  background-color: #5C6BC0;
+  color: #fff;
+  border: #37a0c9;
+}
